BG-test/prometheus-stack/ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.thiagoirch.com"
    http:
      paths:
      - path: "/(.*)"
        pathType: Prefix
        backend:
          service:
            name: "grafana"
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "prometheus.thiagoirch.com"
    http:
      paths:
      - path: "/(.*)"
        pathType: Prefix
        backend:
          service:
            name: "prometheus-service"
            port:
              number: 8080
